--- a/makefile.cmk
+++ b/makefile.cmk
@@ -5,5 +5,6 @@ Build( common/makefile.cmk)
 Build( xatmi/makefile.cmk)
 Build( test/makefile.cmk)
 Build( broker/makefile.cmk)
+Build( monitor/makefile.cmk)
 
 Build( serviceframework/makefile.cmk)
