--- a/utility/makefile.cmk
+++ b/utility/makefile.cmk
@@ -11,24 +11,24 @@ INCLUDE_PATHS= include \
 
 //LIBRARY_PATHS = ../common/bin
 
-Compile( source/casual_utility_uuid.cpp, obj/casual_utility_uuid.o)
-Compile( source/casual_utility_environment.cpp, obj/casual_utility_environment.o)
-Compile( source/casual_utility_file.cpp, obj/casual_utility_file.o)
-Compile( source/casual_utility_signal.cpp, obj/casual_utility_signal.o)
-Compile( source/casual_utility_platform.cpp, obj/casual_utility_platform.o)
-Compile( source/casual_logger.cpp, obj/casual_logger.o)
-Compile( source/casual_error.cpp, obj/casual_error.o)
+Compile( source/uuid.cpp, obj/uuid.o)
+Compile( source/environment.cpp, obj/environment.o)
+Compile( source/file.cpp, obj/file.o)
+Compile( source/signal.cpp, obj/signal.o)
+Compile( source/platform.cpp, obj/platform.o)
+Compile( source/logger.cpp, obj/logger.o)
+Compile( source/error.cpp, obj/error.o)
 
 
 
 LinkLibrary( casual_utility, \
-	obj/casual_utility_uuid.o \
-	obj/casual_utility_environment.o \
-	obj/casual_utility_file.o \
-	obj/casual_utility_signal.o \
-	obj/casual_utility_platform.o \
-	obj/casual_logger.o \
-	obj/casual_error.o, \
+	obj/uuid.o \
+	obj/environment.o \
+	obj/file.o \
+	obj/signal.o \
+	obj/platform.o \
+	obj/logger.o \
+	obj/error.o, \
 	${UUIDLIB})
 
 	
@@ -37,11 +37,11 @@ LinkLibrary( casual_utility, \
 //
 // unittest
 //
-Compile( unittest/source/casual_isolatedunittet_uuid.cpp, obj/casual_isolatedunittet_uuid.o)
+Compile( unittest/isolated/source/uuid.cpp, unittest/isolated/obj/uuid.o)
 
 
 LinkIsolatedUnittest( casual_utility_isolated, \
-	obj/casual_isolatedunittet_uuid.o, \
+	unittest/isolated/obj/uuid.o, \
 	casual_utility )	
 
 	
