--- a/broker/makefile.cmk
+++ b/broker/makefile.cmk
@@ -17,26 +17,26 @@ LIBRARY_PATHS = ../common/bin \
 	$(YAML_LIBRARY_PATH)
 	
 
-Compile( source/casual_broker.cpp, obj/casual_broker.o)
-Compile( source/casual_broker_main.cpp, obj/casual_broker_main.o)
+Compile( source/broker.cpp, obj/broker.o)
+Compile( source/broker_main.cpp, obj/broker_main.o)
 
 
 LinkExecutable( casual_broker, \
-	obj/casual_broker.o \
-	obj/casual_broker_main.o, \
+	obj/broker.o \
+	obj/broker_main.o, \
 	casual_common casual_utility casual_sf)
 	
 	
 //
 // unittest
 //
-Compile( unittest/source/casual_isolatedunittest_broker.cpp, obj/casual_isolatedunittest_broker.o)
-Compile( unittest/source/casual_isolatedunittest_broker_confguration.cpp, obj/casual_isolatedunittest_broker_confguration.o)
+Compile( unittest/isolated/source/broker.cpp, unittest/isolated/obj/broker.o)
+Compile( unittest/isolated/source/broker_confguration.cpp, unittest/isolated/obj/broker_confguration.o)
 
 
 LinkIsolatedUnittest( casual_broker_isolated, \
-	obj/casual_isolatedunittest_broker.o \
-	obj/casual_isolatedunittest_broker_confguration.o, \
+	unittest/isolated/obj/broker.o \
+	unittest/isolated/obj/broker_confguration.o, \
 	casual_utility casual_common casual_sf)
 	
 	
