--- a/xatmi/makefile.cmk
+++ b/xatmi/makefile.cmk
@@ -2,10 +2,13 @@
 
 INCLUDE_PATHS= include \
 	../common/include \
-	../utility/include 
+	../utility/include \
+	$(UNITTEST_INCLUDE_PATH) \
 
-LIBRARY_PATHS = ../common/bin \
+LIBRARY_PATHS = bin \
+    ../common/bin \
 	../utility/bin \
+
 
 Compile( source/xatmi.cpp, obj/xatmi.o)
 Compile( source/xatmi_server.cpp, obj/xatmi_server.o)
@@ -15,3 +18,14 @@ LinkLibrary( casual-xatmi, \
 	obj/xatmi.o \
 	obj/xatmi_server.o, \
 	casual_common casual_utility)
+
+	
+//
+// unittest
+//
+Compile( unittest/isolated/source/test_buffer.cpp, unittest/isolated/obj/test_buffer.o)
+
+
+LinkIsolatedUnittest( casual_xatmi_isolated, \
+    unittest/isolated/obj/test_buffer.o, \
+    casual-xatmi )
