--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -40,12 +40,15 @@ Compile( unittest/isolated/source/test_buffer.cpp, unittest/isolated/obj/test_bu
 Compile( unittest/isolated/source/test_ipc.cpp, unittest/isolated/obj/test_ipc.o)
 Compile( unittest/isolated/source/test_marshal.cpp, unittest/isolated/obj/test_marshal.o)
 Compile( unittest/isolated/source/test_queue.cpp, unittest/isolated/obj/test_queue.o)
+Compile( unittest/isolated/source/test_message_dispatch.cpp, unittest/isolated/obj/test_message_dispatch.o)
+
 
 
 LinkIsolatedUnittest( casual_common_isolated, \
 	unittest/isolated/obj/test_buffer.o \
 	unittest/isolated/obj/test_ipc.o \
 	unittest/isolated/obj/test_marshal.o \
-	unittest/isolated/obj/test_queue.o, \
+	unittest/isolated/obj/test_queue.o \
+	unittest/isolated/obj/test_message_dispatch.o, \
 	casual_utility casual_common )	
 
