--- a/utility/makefile.cmk
+++ b/utility/makefile.cmk
@@ -38,10 +38,12 @@ LinkLibrary( casual_utility, \
 // unittest
 //
 Compile( unittest/isolated/source/test_uuid.cpp, unittest/isolated/obj/test_uuid.o)
+Compile( unittest/isolated/source/test_arguments.cpp, unittest/isolated/obj/test_arguments.o)
 
 
 LinkIsolatedUnittest( casual_utility_isolated, \
-	unittest/isolated/obj/test_uuid.o, \
+	unittest/isolated/obj/test_uuid.o \
+	unittest/isolated/obj/test_arguments.o, \
 	casual_utility )	
 
 	
