WIP YAML service implementation ready to rock

--- a/serviceframework/makefile.cmk
+++ b/serviceframework/makefile.cmk
@@ -40,6 +40,7 @@ Compile( unittest/isolated/source/test_archive.cpp, unittest/isolated/obj/test_a
 Compile( unittest/isolated/source/test_traits.cpp, unittest/isolated/obj/test_traits.o)
 Compile( unittest/isolated/source/test_yaml_archive.cpp, unittest/isolated/obj/test_yaml_archive.o)
 Compile( unittest/isolated/source/test_buffer.cpp, unittest/isolated/obj/test_buffer.o)
+Compile( unittest/isolated/source/test_service.cpp, unittest/isolated/obj/test_service.o)
 
 
 LinkIsolatedUnittest( casual_sf_isolated, \
@@ -47,6 +48,7 @@ LinkIsolatedUnittest( casual_sf_isolated, \
 	unittest/isolated/obj/test_archive.o \
 	unittest/isolated/obj/test_traits.o \
 	unittest/isolated/obj/test_yaml_archive.o \
-	unittest/isolated/obj/test_buffer.o, \
+	unittest/isolated/obj/test_buffer.o \
+	unittest/isolated/obj/test_service.o, \
 	casual_sf casual-xatmi)
 	
